Use sh instead of bash for scripts.

--- a/lib/translate/Dockerfile
+++ b/lib/translate/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine:3.14.2
 LABEL maintainer "Symbolica <dev@symbolica.dev>"
 RUN apk add --no-cache binutils
-COPY --from=symbolica/clang-builder /tmp/clang/install/bin/llvm-extract-12 /usr/local/bin/
-COPY --from=symbolica/clang-builder /tmp/clang/install/bin/opt /usr/local/bin/
+COPY --from=symbolica/clang-builder /tmp/clang/install/bin/llvm-extract /usr/local/bin/llvm-extract-12
+COPY --from=symbolica/clang-builder /tmp/clang/install/bin/opt /usr/local/bin/opt-12
 
 COPY . /.symbolica/
 
