Refactor clang image to use a single, more compact, layer.

--- a/lib/clang-builder/Dockerfile
+++ b/lib/clang-builder/Dockerfile
@@ -1,15 +1,14 @@
 FROM alpine:3.14.2
 
-RUN apk add --no-cache build-base cmake git ninja python3 && \
+RUN apk add --no-cache --virtual build-deps build-base cmake git ninja python3 && \
     mkdir -p /tmp/clang/install && \
     cd /tmp/clang && \
     git clone --depth 1 --branch llvmorg-12.0.1 https://github.com/llvm/llvm-project.git && \
-    mkdir build
-
-WORKDIR /tmp/clang/build
-RUN cmake -G Ninja \
+    mkdir build && \
+    cd build && \
+    cmake -G Ninja \
         -Wno-dev \
-        -DCMAKE_INSTALL_PREFIX=/tmp/clang/install \
+        -DCMAKE_INSTALL_PREFIX=/usr/local \
         -DCLANG_VENDOR=Alpine \
         -DLLVM_ENABLE_PROJECTS=clang \
         -DCMAKE_BUILD_TYPE=MinSizeRel \
@@ -24,8 +23,8 @@ RUN cmake -G Ninja \
         -DLLVM_ENABLE_LIBCXX=NO \
         -DLLVM_ENABLE_PIC=YES \
         -DLLVM_ENABLE_RTTI=YES \
-        /tmp/clang/llvm-project/llvm
-RUN ninja -j 4 install-llvm-extract
-RUN ninja -j 4 install-llvm-link
-RUN ninja -j 4 install-opt
-RUN ninja -j 4 install-clang
+        /tmp/clang/llvm-project/llvm && \
+    ninja -j 4 install-llvm-extract install-llvm-link install-opt install-clang && \
+    cd / && \
+    rm -rf /tmp && \
+    apk del build-deps
