--- a/lib/translate/Dockerfile
+++ b/lib/translate/Dockerfile
@@ -3,24 +3,19 @@ LABEL maintainer "Symbolica <dev@symbolica.dev>"
 ARG clangParallelJobs
 
 RUN clangParallelJobs="${clangParallelJobs:-$(nproc)}" && \
-    installPrefix="/usr/local" && \
     apk add --no-cache binutils && \
     apk add --no-cache --virtual build-deps build-base cmake git ninja python3 && \
-    mkdir -p /tmp/clang/install && \
+    mkdir -p /tmp/clang/build && \
     cd /tmp/clang && \
     git clone --depth 1 --branch llvmorg-12.0.1 https://github.com/llvm/llvm-project.git && \
-    mkdir build && \
     cd build && \
     cmake -G Ninja \
         -Wno-dev \
-        -DCMAKE_INSTALL_PREFIX="${installPrefix}" \
         -DCLANG_VENDOR=Alpine \
         -DCMAKE_BUILD_TYPE=MinSizeRel \
         -DLLVM_TARGETS_TO_BUILD=Native \
         -DLLVM_PARALLEL_LINK_JOBS=${clangParallelJobs} \
         -DLIBCLANG_BUILD_STATIC=ON \
-        -DLLVM_DEFAULT_TARGET_TRIPLE=x86_64-alpine-linux-musl \
-        -DLLVM_HOST_TRIPLE=x86_64-alpine-linux-musl \
         -DLLVM_ENABLE_EH=ON \
         -DLLVM_ENABLE_FFI=NO \
         -DLLVM_ENABLE_LIBCXX=NO \
@@ -28,11 +23,11 @@ RUN clangParallelJobs="${clangParallelJobs:-$(nproc)}" && \
         -DLLVM_ENABLE_RTTI=YES \
         /tmp/clang/llvm-project/llvm && \
     ninja -j ${clangParallelJobs} install-opt install-llvm-extract && \
-    mv "${installPrefix}"/bin/opt "${installPrefix}"/bin/opt-12 && \
-    mv "${installPrefix}"/bin/llvm-extract "${installPrefix}"/bin/llvm-extract-12 && \
+    mv /usr/local/bin/opt /usr/local/bin/opt-12 && \
+    mv /usr/local/bin/llvm-extract /usr/local/bin/llvm-extract-12 && \
     cd / && \
     rm -rf /tmp && \
-    apk del build-deps
+    apk --purge del build-deps
 
 COPY . /.symbolica/
 
