--- a/tests/Application.IntegrationTests/Application.IntegrationTests.csproj
+++ b/tests/Application.IntegrationTests/Application.IntegrationTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>Symbolica.Application.Tests</AssemblyName>
+    <AssemblyName>Symbolica.Application.IntegrationTests</AssemblyName>
     <RootNamespace>Symbolica.Application</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
@@ -15,6 +15,11 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="fail\**" />
+    <None Remove="pass\**" />
   </ItemGroup>
 
 </Project>
