--- a/src/Deserialization/Deserialization.csproj
+++ b/src/Deserialization/Deserialization.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Symbolica.LLVMSharp" Version="0.1.0-master0001" />
+    <PackageReference Include="Symbolica.LLVMSharp" Version="0.1.0-pullrequest0002-0005-a7780ae" />
   </ItemGroup>
 
 </Project>
