--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Run GitVersion
       id: gitversion
       uses: gittools/actions/gitversion/execute@v0.9.9
-  publish-images:
+  publish-base-images:
     runs-on: ubuntu-18.04
     needs: [calculate-version]
     strategy:
@@ -65,9 +65,44 @@ jobs:
         tags: symbolica/${{ matrix.imageName }}:${{ needs.calculate-version.outputs.nuGetVersionV2 }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
+  publish-cpp-image:
+    runs-on: ubuntu-18.04
+    needs: [calculate-version, publish-base-images]
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@master
+      with:
+        fetch-depth: 0
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-build-cpp-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-build-cpp-buildx-
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Build container
+      uses: docker/build-push-action@v2
+      with:
+        context: lib/build/cpp
+        builder: ${{ steps.buildx.outputs.name }}
+        push: true
+        build-args: BUILD_BASE_IMG_TAG=${{ needs.calculate-version.outputs.nuGetVersionV2 }}
+        tags: symbolica/build-cpp:${{ needs.calculate-version.outputs.nuGetVersionV2 }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
   build-application:
     runs-on: ${{ matrix.os }}
-    needs: [calculate-version, publish-images]
+    needs: [calculate-version, publish-base-images]
     strategy:
       matrix:
         include:
