Rejig the structure of lib to support languages.

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -31,7 +31,7 @@ jobs:
       matrix:
         include:
         - imageName: build
-          dockerContext: lib/build
+          dockerContext: lib/c/build
         - imageName: translate
           dockerContext: lib/translate
     steps:
