--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Run GitVersion
       id: gitversion
       uses: gittools/actions/gitversion/execute@v0.9.9
-  publish-images:
+  publish-base-images:
     runs-on: ubuntu-18.04
     needs: [calculate-version]
     strategy:
@@ -65,9 +65,49 @@ jobs:
         tags: symbolica/${{ matrix.imageName }}:${{ needs.calculate-version.outputs.nuGetVersionV2 }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
+  publish-images:
+    runs-on: ubuntu-18.04
+    needs: [calculate-version, publish-base-images]
+    strategy:
+      matrix:
+        include:
+        - imageName: build-cpp
+          dockerContext: lib/cpp/build
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@master
+      with:
+        fetch-depth: 0
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-${{ matrix.imageName }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-${{ matrix.imageName }}-buildx-
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Build container
+      uses: docker/build-push-action@v2
+      with:
+        context: ${{ matrix.dockerContext }}
+        builder: ${{ steps.buildx.outputs.name }}
+        push: true
+        build-args: BUILD_BASE_IMG_TAG=${{ needs.calculate-version.outputs.nuGetVersionV2 }}
+        tags: symbolica/${{ matrix.imageName }}:${{ needs.calculate-version.outputs.nuGetVersionV2 }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
   build-application:
     runs-on: ${{ matrix.os }}
-    needs: [calculate-version, publish-images]
+    needs: [calculate-version, publish-base-images]
     strategy:
       matrix:
         include:
@@ -83,12 +123,12 @@ jobs:
           nugetPush: false
         - os: ubuntu-18.04
           setupScript: |
-            sudo ./lib/c/install-bionic.sh
+            sudo ./lib/install-bionic.sh
             ./lib/install-symbolica.sh
           nugetPush: false
         - os: ubuntu-20.04
           setupScript: |
-            sudo ./lib/c/install-focal.sh
+            sudo ./lib/install-focal.sh
             ./lib/install-symbolica.sh
           nugetPush: false
         - os: windows-2019
@@ -96,7 +136,7 @@ jobs:
             Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-1804 -OutFile ubuntu.zip
             Expand-Archive ubuntu.zip
             .\ubuntu\ubuntu1804.exe install --root
-            wsl ./lib/c/install-bionic.sh
+            wsl ./lib/install-bionic.sh
             wsl ./lib/install-symbolica.sh
           nugetPush: false
         - os: windows-2019
@@ -104,7 +144,7 @@ jobs:
             Invoke-WebRequest -Uri https://aka.ms/wslubuntu2004 -OutFile ubuntu.zip
             Expand-Archive ubuntu.zip
             .\ubuntu\ubuntu2004.exe install --root
-            wsl ./lib/c/install-focal.sh
+            wsl ./lib/install-focal.sh
             wsl ./lib/install-symbolica.sh
           nugetPush: false
         #- os: macos-10.15
