--- a/lib/translate/Dockerfile
+++ b/lib/translate/Dockerfile
@@ -16,7 +16,7 @@ RUN llvmParallelJobs="${llvmParallelJobs:-$(nproc)}" && \
         -DLLVM_INCLUDE_EXAMPLES=OFF \
         -DLLVM_INCLUDE_TESTS=OFF \
         -DLLVM_PARALLEL_LINK_JOBS=${llvmParallelJobs} \
-        -DLLVM_TARGETS_TO_BUILD=Native
+        -DLLVM_TARGETS_TO_BUILD=Native \
     ninja -C build -j ${llvmParallelJobs} install-llvm-extract install-opt && \
     mv /usr/local/bin/llvm-extract /usr/local/bin/llvm-extract-12 && \
     mv /usr/local/bin/opt /usr/local/bin/opt-12 && \
