Put the build directory back into llvm-project.

--- a/lib/translate/Dockerfile
+++ b/lib/translate/Dockerfile
@@ -10,14 +10,14 @@ RUN llvmParallelJobs="${llvmParallelJobs:-$(nproc)}" && \
     cmake -G Ninja \
         -Wno-dev \
         -S llvm-project/llvm \
-        -B build \
+        -B llvm-project/build \
         -DCLANG_VENDOR=Alpine \
         -DCMAKE_BUILD_TYPE=MinSizeRel \
         -DLLVM_INCLUDE_EXAMPLES=OFF \
         -DLLVM_INCLUDE_TESTS=OFF \
         -DLLVM_PARALLEL_LINK_JOBS=${llvmParallelJobs} \
         -DLLVM_TARGETS_TO_BUILD=Native && \
-    ninja -C build -j ${llvmParallelJobs} install-llvm-extract install-opt && \
+    ninja -C llvm-project/build -j ${llvmParallelJobs} install-llvm-extract install-opt && \
     mv /usr/local/bin/llvm-extract /usr/local/bin/llvm-extract-12 && \
     mv /usr/local/bin/opt /usr/local/bin/opt-12 && \
     rm -rf /tmp/* && \
