Remove the root option.

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -133,13 +133,13 @@ jobs:
           nugetPush: false
         - os: windows-2022
           setupScript: |
-            wsl --install --distribution Ubuntu-18.04 --root
+            wsl --install --distribution Ubuntu-18.04
             wsl ./lib/install-bionic.sh
             wsl ./lib/install-symbolica.sh
           nugetPush: false
         - os: windows-2022
           setupScript: |
-            wsl --install --distribution Ubuntu-20.04 --root
+            wsl --install --distribution Ubuntu-20.04
             wsl ./lib/install-focal.sh
             wsl ./lib/install-symbolica.sh
           nugetPush: false
