--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -149,12 +149,10 @@ jobs:
           nugetPush: false
         - os: macos-10.15
           setupScript: |
-            mkdir -p ~/.docker/machine/cache
-            curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
-            brew install docker docker-machine
-            docker-machine create --driver virtualbox default
-            eval "$(docker-machine env default)"
-            env | grep DOCKER >> $GITHUB_ENV
+            HOMEBREW_NO_AUTO_UPDATE=1 brew install --cask docker
+            sudo /Applications/Docker.app/Contents/MacOS/Docker --unattended --install-privileged-components
+            open -a /Applications/Docker.app --args --unattended --accept-license
+            while ! /Applications/Docker.app/Contents/Resources/bin/docker info &>/dev/null; do sleep 1; done
             echo "SYMBOLICA_BUILD_IMAGE=symbolica/build:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
             echo "SYMBOLICA_TRANSLATE_IMAGE=symbolica/translate:${{ needs.calculate-version.outputs.nuGetVersionV2 }}" >> $GITHUB_ENV
           nugetPush: false
