--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ max_line_length = 120
 tab_width = 4
 trim_trailing_whitespace = true
 
-[*.{build,config,csproj,dbml,json,nuspec,proj,props,StyleCop,targets,xml,yml}]
+[*.{build,config,csproj,dbml,json,nuspec,proj,props,StyleCop,targets,txt,xml,yml}]
 indent_size = 2
 tab_width = 2
 
