--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -17,6 +17,10 @@ jobs:
       uses: actions/checkout@master
       with:
         fetch-depth: 0
+    - name: Setup dotnet SDK
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: "6.0.101"
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.11
       with:
