Upgrade everything including dotnet, C#, Z3. (#130)

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -17,13 +17,17 @@ jobs:
       uses: actions/checkout@master
       with:
         fetch-depth: 0
-    - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.9
+    - name: Setup dotnet SDK
+      uses: actions/setup-dotnet@v1
       with:
-        versionSpec: "5.6.9"
+        dotnet-version: "6.0.101"
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.11
+      with:
+        versionSpec: "5.8.1"
     - name: Run GitVersion
       id: gitversion
-      uses: gittools/actions/gitversion/execute@v0.9.9
+      uses: gittools/actions/gitversion/execute@v0.9.11
   publish-base-images:
     runs-on: ubuntu-18.04
     needs: [calculate-version]
@@ -147,7 +151,7 @@ jobs:
             wsl ./lib/install-focal.sh
             wsl ./lib/install-symbolica.sh
           nugetPush: false
-        - os: macos-10.15
+        - os: macos-11
           setupScript: |
             HOMEBREW_NO_AUTO_UPDATE=1 brew install --cask docker
             sudo /Applications/Docker.app/Contents/MacOS/Docker --unattended --install-privileged-components
@@ -164,7 +168,7 @@ jobs:
     - name: Setup dotnet SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: "5.0.300"
+        dotnet-version: "6.0.101"
     - name: Setup test environment
       run: ${{ matrix.setupScript }}
     - name: Build
