--- a/.editorconfig
+++ b/.editorconfig
@@ -20,3 +20,4 @@ dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = false
 dotnet_style_namespace_match_folder = true
 csharp_space_after_cast = true
+csharp_space_within_single_line_array_initializer_braces = true
