--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\Implementation\Implementation.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1"/>
+    <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta3.22114.1"/>
+  </ItemGroup>
+
 </Project>
