--- a/src/Representation/Representation.csproj
+++ b/src/Representation/Representation.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Abstraction\Abstraction.csproj"/>
+    <ProjectReference Include="..\Collection\Collection.csproj"/>
   </ItemGroup>
 
 </Project>
